<resources>
    <string name="app_name">myNPU</string>
    <string name="app_email">andrewvora.apps@gmail.com</string>
    <string name="text_subject_feedback">Feedback for myNpu</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Send Feedback</string>

    <string name="text_default_share">
        Find out more about NPUs from your Android phone!
        Check out myNPU on Google Play :)
    </string>

    <string name="pref_notifications_title">Allow Notifications</string>
    <string name="pref_notifications_summary">Such as event reminders and announcements</string>
    <string name="pref_notifications_key" translatable="false">NotificationPreference</string>

    <string name="title_home_activity">Dashboard</string>
    <string name="title_about_activity">About</string>
    <string name="title_schedule_activity">Meeting Schedule</string>
    <string name="text_your_npu">Your NPU is</string>
    <string name="text_default_npu">--</string>
    <string name="title_map_activity">Set Your NPU</string>
    <string name="title_upcoming_events">Upcoming Events</string>
    <string name="button_find_npu">Find NPU</string>
    <string name="button_find_your_npu">Find Your NPU</string>
    <string name="button_set">Set</string>
    <string name="text_about_npu">What are NPUs?</string>
    <string name="text_share_app">Tell your friends!</string>
    <string name="text_npu_meeting_times">See the entire NPU meeting schedule</string>

    <string name="dismiss">Dismiss</string>
    <string name="text_npu_set">Set your NPU as %s</string>
    <string name="text_no_events">No events found.</string>
    <string name="text_no_internet">
        Seems like you\'re not connected to the Internet.
        Please connect, then hit refresh.
    </string>
    <string name="text_data_is_stale">
        Could not connect to the Internet. Event data may be out-of-date.
    </string>
    <string name="content_description_find_npu_by_address">Find NPU by entering an address</string>
    <string name="content_description_event">Click to bring up directions</string>

    <string name="content_description_image">A backdrop image.</string>
    <string name="content_description_home_backdrop">An image of the Atlanta cityscape.</string>
    <string name="content_description_app_icon">The app logo.</string>
    <string name="content_description_refresh_data">Click to refresh the NPU data.</string>

    <string name="hint_address">Enter an address here</string>

    <string name="title_geocode_result_marker">The latitude and longitude of the address entered</string>
    <string name="title_dialog_select_npu">Select Your NPU</string>
    <string name="text_dialog_cannot_find_npu">Could not find NPU from the given address.</string>

    <string name="title_about_what_is_npu">What is an NPU?</string>
    <string name="text_about_what_is_npu">
        The City of Atlanta is divided into twenty-five Neighborhood Planning Units or NPUs,
        which are citizen advisory councils that make recommendations to the Mayor
        and City Council on zoning, land use, and other planning issues.
        The NPU system was established in 1974 to provide an opportunity for citizens to participate
        actively in the Comprehensive Development Plan,
        which is the city\'s vision for the next five, ten, and fifteen years.
        It is also used as a way for citizens to receive information concerning all functions of city government.
        The system enables citizens to express ideas and comment on city plans and proposals
        while assisting the city in developing plans that best meet the needs of their communities.
    </string>

    <string name="title_about_which">What is my NPU?</string>
    <string name="text_about_which">We\'ll tell you! Just click the button and get to the NPU locator tool.</string>

    <string name="text_about_source">**Information from the City of Atlanta website</string>
    <string name="text_about_source_url">http://www.atlantaga.gov/index.aspx?page=739</string>

    <string name="text_npu_template">NPU %s</string>
    <string-array name="list_npus">
        <item>NPU A</item>
        <item>NPU B</item>
        <item>NPU C</item>
        <item>NPU D</item>
        <item>NPU F</item>
        <item>NPU G</item>
        <item>NPU H</item>
        <item>NPU I</item>
        <item>NPU J</item>
        <item>NPU K</item>
        <item>NPU L</item>
        <item>NPU M</item>
        <item>NPU N</item>
        <item>NPU O</item>
        <item>NPU P</item>
        <item>NPU R</item>
        <item>NPU S</item>
        <item>NPU T</item>
        <item>NPU U</item>
        <item>NPU V</item>
        <item>NPU W</item>
        <item>NPU X</item>
        <item>NPU Y</item>
        <item>NPU Z</item>
    </string-array>
</resources>
