<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <!--What is an NPU?-->
    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title_about_what_is_npu"/>

    <TextView
        style="@style/BodyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/text_about_what_is_npu"/>

    <!--What is my NPU?-->
    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title_about_which"/>

    <TextView
        style="@style/BodyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text_about_which"/>

    <Button
        android:id="@+id/find_my_npu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/md_white_1000"
        android:text="@string/button_find_your_npu"/>

    <!--Disclaimer-->
    <TextView
        style="@style/CaptionTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/md_grey_400"
        android:textStyle="italic"
        android:text="@string/text_about_source"/>
</LinearLayout>