<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row_npu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:padding="24dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@color/md_grey_800">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="18sp"
                    android:text="@string/text_your_npu"/>

                <TextView
                    android:id="@+id/text_selected_npu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="32sp"
                    tools:text="NPU A"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="24sp"
                android:text="@string/title_upcoming_events"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_upcoming_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                tools:listitem="@layout/element_event"
                tools:layout_height="175dp"/>

            <!--About NPUs-->
            <include layout="@layout/element_separator"/>
            <TextView
                android:id="@+id/about_npus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="20sp"
                android:text="@string/text_about_npu"/>

            <!--All NPU Meeting Times-->
            <include layout="@layout/element_separator"/>
            <TextView
                android:id="@+id/npu_meeting_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="20sp"
                android:text="@string/text_npu_meeting_times"/>

            <!--All NPU Meeting Times-->
            <include layout="@layout/element_separator"/>
            <TextView
                android:id="@+id/share_this_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="20sp"
                android:text="@string/text_share_app"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/set_npu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit_white_24dp"
        android:contentDescription=""
        app:layout_anchor="@id/row_npu"
        app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>